# engram

./: .gitignore  Cargo.toml  Dockerfile  fly.toml  rustfmt.toml
docs/plans/: 2026-03-03-engram-design.md  2026-03-03-engram-implementation.md  2026-03-03-working-model-design.md  2026-03-03-working-model-implementation.md
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_engram.py
src/: async_engine.rs  engine.rs  lib.rs  main.rs
src/compiler/: context.rs
src/consolidation/: decay.rs  ltp.rs  mod.rs
src/index/: graph.rs  vector.rs
src/memory/: working.rs
src/provider/: cloudflare.rs  embedder.rs  llm.rs  mod.rs  ollama.rs
src/retrieval/: activation.rs
src/router/: mod.rs  salience.rs
src/sensory/: buffer.rs
src/types/: constellation.rs  cue.rs  edge.rs  enums.rs  memory_node.rs  mod.rs
tests/: async_engine_test.rs  benchmark_test.rs  cloudflare_test.rs  compiler_test.rs  consolidation_test.rs  e2e_test.rs  engine_test.rs  index_test.rs  memory_test.rs  ollama_test.rs  persistence_test.rs  retrieval_test.rs  router_test.rs  sensory_test.rs  types_test.rs
