[package]
name = "engram"
version = "0.1.0"
edition = "2024"
description = "Neuromorphic memory architecture for LLMs"
license = "MIT"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4", features = ["serde"] }
thiserror = "2"

[workspace]
members = [".", "python"]

[dev-dependencies]
approx = "0.5"
