[package]
name = "engram"
version = "0.1.0"
edition = "2024"
description = "Neuromorphic memory architecture for LLMs"
license = "MIT"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[[bin]]
name = "engram"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[workspace]
members = [".", "python"]

[dev-dependencies]
approx = "0.5"
tokio = { version = "1", features = ["full", "test-util"] }
